# jupytercon2023

./: README.md  pyproject.toml
jupyter-config/: my_server_extension.json
my_server_extension/: __init__.py  handlers.py
