[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_server_extension"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "jupyter_server >=2,<3"
]

[tool.hatch.version]
path = "my_server_extension/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"
